<resources>
    <string name="app_name">Folder Picker Demo</string>

    <string name="select_folder">Pick Folder</string>
    <string name="folder_not_selected">Folder is not yet picked</string>
    <string name="folder_pick_cancelled">Folder picking cancelled</string>

    <string name="select_file">Pick File</string>
    <string name="file_not_selected">File is not yet picked</string>
    <string name="file_pick_cancelled">File picking cancelled</string>

    <string name="select_newfile">Select New File</string>
    <string name="newfile_not_selected">New filepath is not yet selected</string>
    <string name="newfile_pick_cancelled">New filepath selection cancelled</string>
    <string name="prompt_newfile">Save New File To:</string>
</resources>
