<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
      android:theme="@style/AppTheme.AppBarOverlay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true">

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <Button
          android:id="@+id/btn_folder"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/AppTheme.Button"
          android:padding="20dp"
          android:text="@string/select_folder" />

        <TextView
          android:id="@+id/tv_folder"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/folder_not_selected" />

        <Button
          android:id="@+id/btn_empty_folder"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/AppTheme.Button"
          android:layout_marginTop="25dp"
          android:padding="20dp"
          android:text="@string/select_empty_dir" />

        <TextView
          android:id="@+id/tv_empty_folder"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/folder_not_selected" />

        <Button
          android:id="@+id/btn_file"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/AppTheme.Button"
          android:layout_marginTop="25dp"
          android:padding="20dp"
          android:text="@string/select_file" />

        <TextView
          android:id="@+id/tv_file"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/file_not_selected" />

        <Button
          android:id="@+id/btn_newfile"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/AppTheme.Button"
          android:layout_marginTop="25dp"
          android:padding="20dp"
          android:text="@string/select_newfile" />

        <TextView
          android:id="@+id/tv_newfile"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/newfile_not_selected" />

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>
